set(SLATEC_INCLUDE_DIR "${CMAKE_CURRENT_SOURCE_DIR}/slatec" CACHE PATH "Include directory for slatec library")
file(GLOB_RECURSE SLATEC_FILES "${SLATEC_INCLUDE_DIR}/*.f")
add_library(slatec STATIC ${SLATEC_FILES})
set_target_properties(slatec PROPERTIES LINKER_LANGUAGE Fortran)
target_include_directories(slatec PUBLIC "${SLATEC_INCLUDE_DIR}")
