target_sources(ql-balance_lib
    PRIVATE
        ql-balance.f90
        rhs_balance.f90
        amn_of_r.f90
        cvodeint.cpp
        evolvestep.f90
        gengrid.f90
        localizer.f90
        odeint_allroutines_without_pause.f
        plag_coeff.f90
        ql-balance_mod.f90
        sample_matrix.f90
        scaleVz.f90
        sparse_mod.f90
        wave_code_data_64bit.f90
        Wmn.f90
        vel_integral.cpp
        W2_arr.f90
)

add_subdirectory(hdf5_tools)